--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>sample</title>
 </head>
-<body>
+<body style="background-color: orange;">
     <h1 style="color:black;" align="center">RESUME</h1>
     <hr>
     <h3 style="color:black;" align="left">SHRIRAM PRASATH V.U  </h3>
@@ -12,7 +12,7 @@
     <hr>
 
 
-    <img src="./P1.jpg" align="center" width="100" height="100"  alt="profile dp"><br><br>
+    <img src="./picture.png" align="center" width="100" height="100"  alt="profile dp"><br><br>
     <strong style="color: darkslategrey;">Carrier Objective</strong>
     <p>To be committed and efficient in my work and to enhance the growth of the organization by 
         improving and applying my competency at work.  
