--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr>
 
 
-    <img src="./picture.png" align="center" width="100" height="100"  alt="profile dp"><br><br>
+    <img src="picture.png" align="center" width="100" height="100"  alt="profile dp"><br><br>
     <strong style="color: darkslategrey;">Carrier Objective</strong>
     <p>To be committed and efficient in my work and to enhance the growth of the organization by 
         improving and applying my competency at work.  
